--- a/src/css/queries.css
+++ b/src/css/queries.css
@@ -3,19 +3,6 @@
 /*****************************/
 
 @media (max-width: 88em) {
-  /* HERO */
-  .heading-primary {
-    font-size: 4.4rem;
-  }
-
-  .hero {
-    gap: 3rem;
-    max-width: 120rem;
-  }
-  .hero-description {
-    font-size: 1.8rem;
-  }
-
   /* FOOTER */
   .footer--grid {
     gap: 2.4rem;
@@ -35,9 +22,9 @@
 }
 
 /*****************************/
-/* BELOW 1216px */
+/* BELOW 1344px */
 /*****************************/
-@media (max-width: 76em) {
+@media (max-width: 84em) {
   /* GENERAL */
   .subheading {
     font-size: 1.4rem;
@@ -56,17 +43,16 @@
   /* HERO */
 
   .hero {
-    grid-template-columns: 55fr 45fr;
-    gap: 4.2rem;
+    max-width: 120rem;
+    gap: 8rem;
   }
   .heading-primary {
-    font-size: 4rem;
-    margin-bottom: 1.4rem;
+    font-size: 4.8rem;
+    margin-bottom: 2.4rem;
   }
 
   .hero-description {
-    /* font-size: 1.6rem; */
-    margin-bottom: 2.8rem;
+    margin-bottom: 3.2rem;
     line-height: 1.5;
   }
 
@@ -78,19 +64,8 @@
   /*  TESTIMONIALS */
 
   .background-icon {
-    font-size: 12rem;
-  }
-
-  .atom-icon {
-    top: 70%;
-    left: 38rem;
-    z-index: 2;
-  }
-
-  .flask-icon {
-    top: 0rem;
-    right: 1rem;
-    z-index: 2;
+    /* font-size: 12rem; */
+    display: none;
   }
 
   /* FOOTER */
@@ -101,35 +76,27 @@
 }
 
 /*****************************/
-/* BELOW 976px */
+/* BELOW 1216px */
 /*****************************/
-@media (max-width: 61em) {
+@media (max-width: 76em) {
   html {
-    font-size: 50%;
+    font-size: 56.25%;
   }
 
-  .modal {
-    width: 64rem;
-  }
-
-  .why-us-container {
-    gap: 3.2rem;
+  .hero {
+    gap: 4.2rem;
   }
 }
+/*****************************/
+/* BELOW 1024px */
+/*****************************/
 
-/*****************************/
-/* BELOW 784px */
-/*****************************/
-@media (max-width: 49em) {
-  /* HEADER */
-  .header {
-    padding: 0 4.8rem;
-  }
+@media (max-width: 64em) {
   .nav-list {
     flex-direction: column;
     gap: 1.4rem;
     height: auto;
-    width: 40%;
+    width: 60%;
   }
 
   .nav-list li {
@@ -170,36 +137,54 @@
   .menu-btn {
     display: block;
   }
-  /* HERO */
-  .section--hero {
-    padding: 4.8rem 11.2rem 9.6rem 11.2rem;
-  }
 
+  /* HERO */
   .hero {
     grid-template-columns: 1fr;
     text-align: center;
+    padding: 0 9.8rem;
   }
 
-  .heading-primary {
-    margin-bottom: 2.8rem;
-  }
-
-  .hero-description {
-    margin-bottom: 3.8rem;
-  }
   .hero-img {
-    width: 70%;
+    width: 60%;
   }
 
   .hero-btn-container {
     justify-content: center;
   }
 
-  /* WHY US */
-  .why-us-container {
-    max-width: 60rem;
-    margin: 2.2rem auto 0 auto;
+  .modal {
+    width: 64rem;
   }
+
+  .why-us-container {
+    gap: 3.2rem;
+  }
+}
+
+/*****************************/
+/* BELOW 800px */
+/*****************************/
+@media (max-width: 50em) {
+  .section {
+    padding: 9.8rem 8.4rem;
+  }
+
+  .subheading {
+    padding: 0;
+  }
+
+  /* HERO */
+
+  .heading-primary {
+    font-size: 4.2rem;
+  }
+
+  .hero-description {
+    font-size: 1.8rem;
+  }
+
+  /* WHY US */
   .feature-title {
     font-size: 1.8rem;
   }
@@ -208,6 +193,9 @@
     font-size: 1.4rem;
   }
 
+  .why-us-container {
+    padding: 0;
+  }
   /* TESTIMONIALS */
   .testimonial-slider {
     height: 60rem;
@@ -221,6 +209,7 @@
     align-items: center;
     justify-items: center;
     text-align: center;
+    height: 90%;
   }
 
   .testimonial-img {
@@ -229,19 +218,19 @@
     transform: scale(1);
   }
 
+  blockquote {
+    align-self: start;
+  }
   .testimonial-text {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 
-  .atom-icon {
-    left: 86%;
-    top: -3rem;
+  .testimonial-author {
+    font-size: 1.2rem;
   }
-
-  .flask-icon {
-    display: none;
+  .dots {
+    bottom: 0;
   }
-
   /* PROGRAMS */
 
   .tabs--container,
@@ -310,19 +299,36 @@
 }
 
 /*****************************/
-/* BELOW 576px */
+/* BELOW 608px */
 /*****************************/
 
-@media (max-width: 36em) {
+@media (max-width: 38em) {
   .section {
-    padding: 7.2rem 5.2rem;
+    padding: 6.4rem 4.8rem;
+  }
+
+  /* HEADER */
+
+  .header {
+    padding: 0 3.2rem;
+  }
+  .nav-link:link,
+  .nav-link:visited {
+    font-size: 2.4rem;
+  }
+
+  .nav-cta {
+    font-size: 2.4rem;
   }
 
   /* HERO */
   .section--hero {
-    padding: 2.4rem 3.2rem 6.4rem 3.2rem;
+    padding: 2.4rem 0 6.4rem 0;
   }
 
+  .hero {
+    padding: 0 3.8rem;
+  }
   /* WHY US */
   .why-us-container {
     grid-template-columns: 1fr;
@@ -336,7 +342,7 @@
     font-size: 1.4rem;
   }
   .program--title {
-    font-size: 2.2rem;
+    font-size: 2rem;
   }
 
   .program--info {
@@ -346,8 +352,8 @@
   .program--list {
     font-size: 1.4rem;
   }
-
-  .program--fees {
+  .program--fees,
+  .discount-fee {
     font-size: 1.6rem;
   }
 
@@ -355,11 +361,11 @@
     padding: 0.2rem 1.8rem 1.8rem 1.8rem;
   }
 
-  /* TESTIMONIALS */
-  .atom-icon {
-    display: none;
+  .program-btn--container {
+    gap: 0.4rem;
   }
 
+  /* TESTIMONIALS */
   .testimonial-author {
     line-height: 1.2;
   }
