--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,22 +8,25 @@
   --primary-dark-color: #092635;
   --dark-tint-color1: #536772;
   --primary-green-color: #15803d;
-  --green-tint-color1: #edfcf3;
-  --green-tint-color2: #d0f7df;
+  /* --green-tint-color1: #edfcf3; */
+  --green-tint-color1: #defae9;
+  --green-tint-color2: #c1f5d4;
   /* --gradient-green: linear-gradient(#15803d, #73b38b); */
   --gradient-green-down: linear-gradient(#15803d, #223c49);
   --gradient-green-right: linear-gradient(to right, #15803d, #223c49);
 }
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 body {
   font-family: "Inter", sans-serif;
   color: var(--primary-dark-color);
+  overflow-x: hidden;
 }
 
 .section {
-  padding: 9.6rem 8.4rem;
+  padding: 9.6rem 0;
   width: 100vw;
 }
 
@@ -35,6 +38,7 @@ body {
   letter-spacing: 0.2rem;
   margin-bottom: 2.8rem;
   display: inline-block;
+  padding-left: 8.4rem;
 }
 
 .enroll-cta {
@@ -62,9 +66,6 @@ body {
   margin-top: 2.4rem;
 }
 
-.prevent-scroll {
-  overflow: hidden;
-}
 /**************************************/
 /* Header */
 /**************************************/
@@ -87,7 +88,7 @@ body {
   justify-content: space-between;
   height: 100%;
   width: 100%;
-  transition: all 0.5s;
+  transition: all 0.8s;
 }
 
 .nav-list {
@@ -99,8 +100,6 @@ body {
 }
 
 .nav-list li {
-  display: flex;
-  align-items: center;
   transition: all 0.3s;
   padding: 0 1.8rem;
   border-radius: 0.6rem;
@@ -118,6 +117,11 @@ body {
   color: inherit;
   font-size: 1.8rem;
   font-weight: 600;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .menu-btn {
@@ -141,6 +145,11 @@ body {
   display: none;
 }
 
+.nav-open .menu-btn {
+  position: fixed;
+  right: 4.8rem;
+  top: 2.6rem;
+}
 .nav-open .btn-close-menu {
   display: block;
 }
@@ -155,24 +164,24 @@ body {
 
 .section--hero {
   background-color: var(--green-tint-color1);
-  padding: 4.8rem 8.2rem 9.6rem 8.2rem;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero {
   display: grid;
   max-width: 130rem;
   margin: 0 auto;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
   justify-items: center;
   align-items: center;
-  /* padding: 0 8.2rem; */
-  gap: 3.8rem;
+  padding: 0 3.2rem;
+  gap: 9.6rem;
 }
 
 .heading-primary {
   font-size: 5.2rem;
   line-height: 1.1;
-  margin-bottom: 2.2rem;
+  margin-bottom: 3.2rem;
   letter-spacing: -0.1rem;
 }
 
@@ -186,7 +195,7 @@ body {
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
-  margin-bottom: 4rem;
+  margin-bottom: 4.8rem;
 }
 
 .hero-btn-container {
@@ -228,7 +237,7 @@ body {
 }
 
 .hero-img {
-  width: 100%;
+  max-width: 100%;
   box-shadow: 3px 3px 14px #15803c41;
 }
 
@@ -240,6 +249,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   max-width: 100rem;
   margin: 3.8rem auto 0 auto;
+  padding: 0 8.4rem;
   gap: 4.8rem;
 }
 
@@ -323,7 +333,7 @@ body {
   display: flex;
   align-items: center;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .testimonial-slide {
@@ -336,8 +346,8 @@ body {
   margin: auto 0;
   border-radius: 0.8rem;
   width: 100%;
-  padding: 3.2rem 11.2rem 3.2rem 6.4rem;
-
+  padding: 3.2rem 10rem 3.2rem 5rem;
+  transition: all 1s;
   z-index: 1;
 }
 
@@ -388,6 +398,27 @@ body {
 .flask-icon {
   top: 1.5rem;
   right: -12rem;
+}
+
+.dots {
+  display: flex;
+  gap: 0.8rem;
+  position: absolute;
+
+  left: 50%;
+  bottom: 2rem;
+  transform: translateX(-50%);
+}
+.dots--dot {
+  height: 1rem;
+  width: 1rem;
+  background-color: rgb(21, 128, 61, 0.2);
+  border: 1px solid rgb(21, 128, 61, 0.5);
+  border-radius: 50%;
+}
+
+.dot--active {
+  background-color: var(--primary-green-color);
 }
 
 /**************************************/
@@ -483,6 +514,9 @@ body {
   font-style: italic;
 }
 
+.discount-fee {
+  font-size: 2.4rem;
+}
 .fee-container {
   display: flex;
   justify-content: space-between;
@@ -504,7 +538,7 @@ body {
 
 .footer--grid {
   display: grid;
-  grid-template-columns: 4fr 5fr 4fr 2fr;
+  grid-template-columns: 4fr 5fr 2fr 4fr;
   gap: 4.8rem;
 }
 
@@ -655,8 +689,6 @@ body {
 }
 
 .btn--submit:hover {
-  transform: translate(50%, -0.5rem);
-  /* box-shadow: 0 0 15px var(--primary-green-color); */
   box-shadow: 0 0 6px var(--green-tint-color1);
 }
 
